--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,5 @@
 * text=auto
 *.png filter=lfs diff=lfs merge=lfs -text
 *.asset filter=lfs diff=lfs merge=lfs -text
+*.meta filter=lfs diff=lfs merge=lfs -text
+*.fbx filter=lfs diff=lfs merge=lfs -text
