--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"isFullScreen":false,"isSoundOn":true,"resolutionIndex":22,"masterVolume":-32.74995,"bgmVolume":-30.0408039,"sfxVolume":-10.0,"cameraRotateSpeed":7.72289276}
+{"isFullScreen":false,"isSoundOn":true,"resolutionIndex":2,"masterVolume":1.0,"bgmVolume":1.0,"sfxVolume":-10.0,"cameraRotateSpeed":4.022964}
