--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"isFullScreen":false,"isSoundOn":true,"resolutionIndex":2,"masterVolume":1.0,"bgmVolume":1.0,"sfxVolume":-10.0,"cameraRotateSpeed":4.022964}
+{"isFullScreen":true,"isSoundOn":true,"resolutionIndex":2,"masterVolume":-21.8248672,"bgmVolume":-20.4202652,"sfxVolume":-10.0,"cameraRotateSpeed":6.26118946}
