--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"isFullScreen":true,"isSoundOn":true,"resolutionIndex":2,"masterVolume":-21.8248672,"bgmVolume":-20.4202652,"sfxVolume":-10.0,"cameraRotateSpeed":6.26118946}
+{"isFullScreen":true,"isSoundOn":true,"resolutionIndex":4,"masterVolume":1.0,"bgmVolume":-10.0,"sfxVolume":-10.0,"cameraRotateSpeed":6.26118946}
