Graphic Quality Base Setting And Revert Func

--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"isFullScreen":true,"isSoundOn":true,"resolutionIndex":4,"masterVolume":1.0,"bgmVolume":-10.0,"sfxVolume":-10.0,"cameraRotateSpeed":6.26118946}
+{"isFullScreen":true,"isSoundOn":true,"resolutionIndex":4,"qualityIndex":2,"masterVolume":1.0,"bgmVolume":-10.0,"sfxVolume":-10.0,"cameraRotateSpeed":6.26118946}
